--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,10 @@
 
 @font-face {
     font-family: 'Special Elite';
-    src: url('inc/specialelite-webfont.woff2') format('woff2'),;
-    src: url('inc/specialelite-webfont.woff2') format('woff2'),
-         url('inc/specialelite-webfont.woff') format('woff'),
-         url('inc/specialelite-webfont.ttf') format('truetype');
+    src: url('../assets/fonts/specialelite-webfont.woff2') format('woff2'),;
+    src: url('../assets/fonts/specialelite-webfont.woff2') format('woff2'),
+         url('../assets/fonts/specialelite-webfont.woff') format('woff'),
+         url('../assets/fonts/specialelite-webfont.ttf') format('truetype');
     font-weight: 400;
     font-style: 400;
 }
@@ -29,7 +29,7 @@ html, body, canvas, #container {
 
 html, body {
     overflow:hidden;
-    background: url('inc/handmadepaper.png');
+    background: url('../assets/img/handmadepaper.png');
     background-size: 50px 50px;
     font-family: 'Special Elite';
 }
